# opencv_cpp

./: LICENSE  README.md
learn/basic/doc/: README.md
learn/basic/src/: basic.cpp  basic.h  basic.h.autosave  main.cpp
learn/exampleform/src/: main.cpp
learn/histomgram/src/: histogram.cpp  histogram.h  main.cpp
learn/houghdetect/src/: main.cpp
learn/imagedivide/src/: main.cpp
learn/imagesort/doc/: README.md
learn/imagesort/src/: main.cpp  record.h  sortimage.cpp  sortimage.h  sortimage.h.autosave
learn/imagesort/src/basic/: basic.cpp  basic.h  cJSON.h  getsubfile.cpp  getsubfile.h
learn/match/src/: basicmatch.cpp  basicmatch.hpp  main.cpp  orbmatch.cpp  orbmatch.h
learn/psnr/doc/: README.md
learn/psnr/src/: dct.c  dct.h  main.cpp
learn/simple_convert/src/: main.cpp
learn/simulate_178And226/doc/design/: design.md
learn/simulate_178And226/src/: imagetransformer.cpp  imagetransformer.cpp.autosave  imagetransformer.h  imagetransformer.h.autosave  main.cpp  main.cpp.autosave  transformer.cpp  transformer.h
personal/CardRecognize/: CMakeLists.txt
personal/CardRecognize/cmake/: FindCardRecognize.cmake
personal/CardRecognize/demos/call_lib/src/: main.cpp
personal/CardRecognize/gtest/: CMakeLists.txt
personal/CardRecognize/gtest/tpg_main/: tpg_main.cc  tpg_main.cpp
personal/CardRecognize/include/CardRecognize/: CardRecognize.h
personal/CardRecognize/src/: CardRecognize.cpp
personal/IconCompare/: CMakeLists.txt
personal/IconCompare/demos/call_lib/src/: main.cpp
personal/IconCompare/include/IconCompare/: IconCompare.h
personal/IconCompare/src/: IconCompare.cpp
personal/capture/src/: main.cpp  misc.cpp  misc.h
personal/opencv_basic/: CMakeLists.txt
personal/opencv_basic/build-opencv_basic-not_config_default_compiler_5_9_7_GCC_64bit-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_basic.cbp
personal/opencv_basic/include/opencv_basic/: opencv_basic.h  opencv_match.h  opencv_transform.h
personal/opencv_basic/src/: opencv_basic.cpp  opencv_match.cpp  opencv_transform.cpp
start/: Makefile  compile_help.md
start/lib/opencv-3.4.1/lib64/: libopencv_calib3d.so.3.4.1  libopencv_core.so.3.4.1  libopencv_features2d.so.3.4.1  libopencv_flann.so.3.4.1  libopencv_highgui.so.3.4.1  libopencv_imgcodecs.so.3.4.1  libopencv_ml.so.3.4.1  libopencv_objdetect.so.3.4.1  libopencv_photo.so.3.4.1  libopencv_shape.so.3.4.1  libopencv_stitching.so.3.4.1  libopencv_superres.so.3.4.1  libopencv_video.so.3.4.1  libopencv_videoio.so.3.4.1  libopencv_videostab.so.3.4.1
start/script/: Makefile
